# LPV

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
include/: GMM.h  lpvDS.h  utils.h
launch/: run_testLPVDS_node.launch
models/: CShape-bottom-pqlf.yml
models/CShape-bottom-pqlf/: A_k  Sigma
src/: lpvDS.cpp  test_lpvDS.cpp  test_lpvDS_node.cpp  utils.cpp
src/lpvDS/: GMM.cpp  lpvDS.cpp
